@@ -43,6 +43,7 @@ Release 0.19.0 - Unreleased
    HBASE-952   Deadlock in HRegion.batchUpdate
    HBASE-954   Don't reassign root region until ProcessServerShutdown has split
                the former region server's log
+   HBASE-953   PerformanceEvaluation tests if table exists by comparing descriptors
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
